--- a/style-files/style.css
+++ b/style-files/style.css
@@ -242,7 +242,7 @@ footer {
 
 .fa-facebook {
     padding: 0.3rem;
-    background-color: #f8f9fa;
+    background-color: white;
     color: #4867aa;
 }
 
