--- a/style-files/demostyle.css
+++ b/style-files/demostyle.css
@@ -1,541 +1,661 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
+@import url("https://fonts.googleapis.com/css?family=Quicksand:400,500,700");
 html,
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Quicksand", sans-serif;
-    font-size: 62.5%;
-    font-size: 10px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Quicksand", sans-serif;
+  font-size: 62.5%;
+  font-size: 10px;
 }
 
 :root {
-    --primary-color: #fbbf24;
+  --primary-color: #fbbf24;
 }
-
 
 /*-- Inspiration taken from abdo steif -->
 /* --> https://codepen.io/abdosteif/pen/bRoyMb?editors=1100*/
 
-
 /* Navbar section */
 
 .nav {
-    width: 100%;
-    height: 65px;
-    position: fixed;
-    line-height: 65px;
-    text-align: center;
+  z-index: 3;
+  width: 100%;
+  height: 65px;
+  position: fixed;
+  line-height: 65px;
+  text-align: center;
 }
 
 .nav div.logo {
-    float: left;
-    width: 1px;
-    height: 1rem;
+  float: left;
+  width: 1px;
+  height: 1rem;
 }
 
 .nav div.logo a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 1rem;
+  text-decoration: none;
+  color: #fff;
+  font-size: 1rem;
 }
 
 .nav div.main_list {
-    height: 65px;
-    float: right;
+  height: 65px;
+  float: right;
 }
 
 .nav div.main_list ul {
-    width: 100%;
-    height: 65px;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  width: 100%;
+  height: 65px;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .nav div.main_list ul li {
-    width: auto;
-    height: 65px;
-    padding: 0;
-    padding-right: 3rem;
+  width: auto;
+  height: 65px;
+  padding: 0;
+  padding-right: 3rem;
 }
 
 .nav div.main_list ul li a {
-    text-decoration: none;
-    color: #fff;
-    line-height: 65px;
-    font-size: 2.4rem;
-    font-weight: 200;
+  text-decoration: none;
+  color: #fff;
+  line-height: 65px;
+  font-size: 2.4rem;
+  font-weight: 200;
 }
 
 .nav div.main_list ul li a:hover {
-    color: #fbbf24;
+  color: #fbbf24;
 }
 
 .padleft {
-    padding-left: 100px;
+  padding-left: 100px;
 }
-
 
 /* Home section */
 
 .home {
-    width: 100%;
-    height: 100vh;
-    background-image: url("/images/kid2.jpg");
-    background-position: center top;
-    background-size: cover;
+  width: 100%;
+  height: 100vh;
+  background-image: url("/images/kid2.jpg");
+  background-position: center top;
+  background-size: cover;
 }
-
+.home-quote {
+  position: relative;
+  top: 15%;
+  left: 40%;
+  font-size: 3rem;
+  color: white;
+  width: 50vw;
+  font-style: italic;
+}
 .navTrigger {
-    display: none;
+  display: none;
 }
 
 .nav {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
-
 
 /* Media qurey section */
 
 .row {
-    display: flex;
-    margin: auto;
-    justify-content: space-around;
+  display: flex;
+  margin: auto;
+  justify-content: space-around;
 }
 
 .col-sm-6 {
-    padding: 2rem 2rem;
+  padding: 2rem 2rem;
 }
 
 .card-text {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .card-title {
-    font-size: 2rem;
-    font-weight: 1200;
+  font-size: 2rem;
+  font-weight: 1200;
 }
 
 .no-gutters {
-    height: 30rem;
-    width: 20rem;
-    font-size: large;
+  height: 30rem;
+  width: 20rem;
+  font-size: large;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-    .container {
-        margin: 0;
-    }
+  .container {
+    margin: 0;
+  }
 }
 
-@media screen and (max-width:768px) {
-    .navTrigger {
-        display: block;
-    }
-    .nav div.logo {
-        margin-left: 15px;
-    }
-    .nav div.main_list {
-        width: 100%;
-        height: 0;
-        overflow: hidden;
-    }
-    .nav div.show_list {
-        height: auto;
-        display: none;
-    }
-    .nav div.main_list ul {
-        flex-direction: column;
-        width: 100%;
-        height: 100vh;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        background-color: #111;
-        /*same background color of navbar*/
-        background-position: center top;
-    }
-    .nav div.main_list ul li {
-        width: 100%;
-        text-align: right;
-    }
-    .nav div.main_list ul li a {
-        text-align: center;
-        width: 100%;
-        font-size: 3rem;
-        padding: 20px;
-    }
-    .nav div.media_button {
-        display: block;
-    }
+@media screen and (max-width: 768px) {
+  .navTrigger {
+    display: block;
+  }
+  .nav div.logo {
+    margin-left: 15px;
+  }
+  .nav div.main_list {
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+  }
+  .nav div.show_list {
+    height: auto;
+    display: none;
+  }
+  .nav div.main_list ul {
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #111;
+    /*same background color of navbar*/
+    background-position: center top;
+  }
+  .nav div.main_list ul li {
+    width: 100%;
+    text-align: right;
+  }
+  .nav div.main_list ul li a {
+    text-align: center;
+    width: 100%;
+    font-size: 3rem;
+    padding: 20px;
+  }
+  .nav div.media_button {
+    display: block;
+  }
 }
-
 
 /* Animation */
-
 
 /* Inspiration taken from Dicson https://codemyui.com/simple-hamburger-menu-x-mark-animation/ */
 
 .navTrigger {
-    cursor: pointer;
-    width: 30px;
-    height: 25px;
-    margin: auto;
-    position: absolute;
-    right: 30px;
-    top: 0;
-    bottom: 0;
+  cursor: pointer;
+  width: 30px;
+  height: 25px;
+  margin: auto;
+  position: absolute;
+  right: 30px;
+  top: 0;
+  bottom: 0;
 }
 
 .navTrigger i {
-    background-color: #fff;
-    border-radius: 2px;
-    content: '';
-    display: block;
-    width: 100%;
-    height: 4px;
+  background-color: #fff;
+  border-radius: 2px;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
 }
 
 .navTrigger i:nth-child(1) {
-    -webkit-animation: outT 0.8s backwards;
-    animation: outT 0.8s backwards;
-    -webkit-animation-direction: reverse;
-    animation-direction: reverse;
+  -webkit-animation: outT 0.8s backwards;
+  animation: outT 0.8s backwards;
+  -webkit-animation-direction: reverse;
+  animation-direction: reverse;
 }
 
 .navTrigger i:nth-child(2) {
-    margin: 5px 0;
-    -webkit-animation: outM 0.8s backwards;
-    animation: outM 0.8s backwards;
-    -webkit-animation-direction: reverse;
-    animation-direction: reverse;
+  margin: 5px 0;
+  -webkit-animation: outM 0.8s backwards;
+  animation: outM 0.8s backwards;
+  -webkit-animation-direction: reverse;
+  animation-direction: reverse;
 }
 
 .navTrigger i:nth-child(3) {
-    -webkit-animation: outBtm 0.8s backwards;
-    animation: outBtm 0.8s backwards;
-    -webkit-animation-direction: reverse;
-    animation-direction: reverse;
+  -webkit-animation: outBtm 0.8s backwards;
+  animation: outBtm 0.8s backwards;
+  -webkit-animation-direction: reverse;
+  animation-direction: reverse;
 }
 
 .navTrigger.active i:nth-child(1) {
-    -webkit-animation: inT 0.8s forwards;
-    animation: inT 0.8s forwards;
+  -webkit-animation: inT 0.8s forwards;
+  animation: inT 0.8s forwards;
 }
 
 .navTrigger.active i:nth-child(2) {
-    -webkit-animation: inM 0.8s forwards;
-    animation: inM 0.8s forwards;
+  -webkit-animation: inM 0.8s forwards;
+  animation: inM 0.8s forwards;
 }
 
 .navTrigger.active i:nth-child(3) {
-    -webkit-animation: inBtm 0.8s forwards;
-    animation: inBtm 0.8s forwards;
+  -webkit-animation: inBtm 0.8s forwards;
+  animation: inBtm 0.8s forwards;
 }
 
 @-webkit-keyframes inM {
-    50% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(45deg);
-    }
+  50% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+  }
 }
 
 @keyframes inM {
-    50% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(45deg);
-    }
+  50% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(45deg);
+  }
 }
 
 @-webkit-keyframes outM {
-    50% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(45deg);
-    }
+  50% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+  }
 }
 
 @keyframes outM {
-    50% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(45deg);
-    }
+  50% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(45deg);
+  }
 }
 
 @-webkit-keyframes inT {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(9px) rotate(135deg);
-    }
+  0% {
+    -webkit-transform: translateY(0px) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translateY(9px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translateY(9px) rotate(135deg);
+  }
 }
 
 @keyframes inT {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(9px) rotate(135deg);
-    }
+  0% {
+    transform: translateY(0px) rotate(0deg);
+  }
+  50% {
+    transform: translateY(9px) rotate(0deg);
+  }
+  100% {
+    transform: translateY(9px) rotate(135deg);
+  }
 }
 
 @-webkit-keyframes outT {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(9px) rotate(135deg);
-    }
+  0% {
+    -webkit-transform: translateY(0px) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translateY(9px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translateY(9px) rotate(135deg);
+  }
 }
 
 @keyframes outT {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(9px) rotate(135deg);
-    }
+  0% {
+    transform: translateY(0px) rotate(0deg);
+  }
+  50% {
+    transform: translateY(9px) rotate(0deg);
+  }
+  100% {
+    transform: translateY(9px) rotate(135deg);
+  }
 }
 
 @-webkit-keyframes inBtm {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(-9px) rotate(135deg);
-    }
+  0% {
+    -webkit-transform: translateY(0px) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translateY(-9px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translateY(-9px) rotate(135deg);
+  }
 }
 
 @keyframes inBtm {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(-9px) rotate(135deg);
-    }
+  0% {
+    transform: translateY(0px) rotate(0deg);
+  }
+  50% {
+    transform: translateY(-9px) rotate(0deg);
+  }
+  100% {
+    transform: translateY(-9px) rotate(135deg);
+  }
 }
 
 @-webkit-keyframes outBtm {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(-9px) rotate(135deg);
-    }
+  0% {
+    -webkit-transform: translateY(0px) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translateY(-9px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translateY(-9px) rotate(135deg);
+  }
 }
 
 @keyframes outBtm {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(-9px) rotate(135deg);
-    }
+  0% {
+    transform: translateY(0px) rotate(0deg);
+  }
+  50% {
+    transform: translateY(-9px) rotate(0deg);
+  }
+  100% {
+    transform: translateY(-9px) rotate(135deg);
+  }
 }
 
 .affix {
-    padding: 0;
-    background-color: #111;
+  padding: 0;
+  background-color: #111;
 }
 
 .myH2 {
-    text-align: center;
-    font-size: 4rem;
+  text-align: center;
+  font-size: 4rem;
 }
 
 .myP {
-    text-align: justify;
-    padding-left: 15%;
-    padding-right: 15%;
-    font-size: 20px;
+  text-align: justify;
+  padding-left: 15%;
+  padding-right: 15%;
+  font-size: 20px;
 }
 
-@media all and (max-width:700px) {
-    .myP {
-        padding: 2%;
-    }
+@media all and (max-width: 700px) {
+  .myP {
+    padding: 2%;
+  }
 }
-
 
 /* 
 DROPDOWN */
 
-
 /* Dropdown Button */
 
 .dropbtn {
-    background-color: transparent;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
+  background-color: transparent;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
 }
-
 
 /* The container <div> - needed to position the dropdown content */
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
-
 
 /* Dropdown Content (Hidden by Default) */
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: black;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: black;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
-
 
 /* Links inside the dropdown */
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
-
 
 /* Change color of dropdown links on hover */
 
 .dropdown-content a:hover {
-    background-color: black;
+  background-color: black;
 }
-
 
 /* Show the dropdown menu on hover */
 
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
 
-
 /* Change the background color of the dropdown button when the dropdown content is shown */
-
 
 /* HomePage section2 */
 
 .heading2 {
-    width: fit-content;
-    margin: auto;
-    font-size: 3rem;
-    background-color: #fbbf24;
-    padding: 2rem 5rem;
-    border-radius: 3rem;
+  width: fit-content;
+  margin: auto;
+  font-size: 3rem;
+  background-color: #fbbf24;
+  padding: 2rem 5rem;
+  border-radius: 3rem;
+}
+.card-body {
+  padding: 0 2rem;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: white 2px solid;
+}
+.sub {
+  background-color: #fbbf24;
+
+  margin-top: 5rem;
+  margin: 5rem auto;
+  width: 30rem;
+  box-shadow: 2px 2px 10px rgba(227, 243, 6, 0.6);
 }
 
 .sub {
-    background-color: #fbbf24;
-    border: none;
-    margin-top: 5rem;
-    margin: 5rem auto;
-    width: 30rem;
-    box-shadow: 2px 2px 10px rgba(227, 243, 6, 0.6);
-}
-
-.sub {
-    transition: transform 0.2s;
+  transition: transform 0.2s;
 }
 
 .sub:hover {
-    transform: scale(1.25);
-    box-shadow: 5px 10px 100px gray;
+  transform: scale(1.25);
+  box-shadow: 5px 10px 100px gray;
 }
-
 
 /* ----------- */
 
-
 /* ---footer--- */
-
-footer {
-    margin-top: 4%;
+.form-inline {
+  display: flex;
+  flex-direction: row;
 }
-
+.form-control {
+  width: 20rem;
+}
+footer {
+  margin-top: 4%;
+}
+.contains-sec {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 7rem;
+}
+.social p {
+  margin-top: 8rem;
+  text-align: center;
+}
+.social .icons {
+  text-align: center;
+}
 .social .fab {
-    transition: transform 0.2s;
+  transition: transform 0.2s;
 }
 
 .social .fab:hover {
-    transform: scale(1.2);
-    cursor: pointer;
+  transform: scale(1.2);
+  cursor: pointer;
 }
 
 .btn {
-    background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
 
 .p-3 {
-    color: var(--primary-color);
+  background-color: var(--primary-color);
+  color: white;
+  padding: 3rem;
+  margin-top: 0;
 }
 
 .fa-facebook {
-    padding: 0.3rem;
-    background-color: #f8f9fa;
-    color: #4867aa;
-    height: 2rem;
-    width: 100rem;
+  padding: 0.3rem;
+  background-color: white;
+  color: #4867aa;
 }
 
 .fa-twitter {
-    border-radius: 10px;
-    padding: 0.3rem;
-    background-color: #50abf1;
-    color: white;
+  border-radius: 10px;
+  padding: 0.3rem;
+  background-color: #50abf1;
+  color: white;
 }
 
 .fa-youtube {
-    color: red;
+  color: red;
 }
 
 .fab {
-    height: 100px;
-    width: 100px;
+  margin: 0 2rem 4rem 2rem;
 }
 
 .justify-content-center {
-    justify-content: center;
+  justify-content: center;
+}
+.snd-btn {
+  width: fit-content;
+  border: none;
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  margin-left: 3rem !important;
+}
+
+/* ------- */
+.box {
+  width: 300px;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+  display: block;
+  margin: auto;
+  margin-top: 30px;
+  border-radius: 20px;
+  font-family: "Poppins", sans-serif;
+  padding: 20px 30px 30px 30px;
+  background: #fff;
+  position: relative;
+}
+.Input {
+  display: block;
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+  margin: auto;
+  margin-top: 20px;
+  font-size: 14px;
+
+  box-sizing: border-box;
+  outline: none;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+}
+.button {
+  border-radius: 100px;
+  border: none;
+  padding: 16px;
+  font-weight: bold;
+  background: #f1f1f1;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.button:hover {
+  background: #fbbf24;
+  color: #fff;
+}
+
+.field {
+  border-radius: 100px;
+  border: none;
+  padding: 16px;
+  background: #f1f1f1;
+}
+.hidden {
+  visibility: hidden;
+}
+.show {
+  visibility: visible;
+}
+.fa-envelope {
+  color: #fbbf24;
+}
+.header {
+  position: absolute;
+  background: #111;
+  width: 100%;
+  height: 60px;
+  padding: 20px 0;
+  left: 0;
+  top: 0;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  color: #fff;
+  text-align: center;
+  font-size: 3em;
+  overflow: hidden;
+}
+.header p {
+  margin: 0;
+  position: absolute;
+  top: 20%;
+  left: 28%;
+  font-size: 40px;
+}
+
+.animation {
+  position: absolute;
+  animation: mymove 0.5s forwards;
+}
+
+@keyframes mymove {
+  0% {
+    left: 50%;
+  }
+  100% {
+    left: 120% as;
+  }
+}
+.box .form {
+  padding-top: 90px;
 }
